# pm_ai_agentic

./: .env.example  .gitignore  Aptfile  DESIGN_SPEC.md  INDEX.md  config.yaml  docker-compose.yml  openapi.yaml  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/adapters/: docxtpl_document.py  local_document.py  mock_tracker.py  registry.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  auth.py  bindings.py  calendar.py  confirmations.py  connections.py  documents.py  liff.py  meetings.py  members.py  milestones.py  notifications.py  numbering.py  projects.py  tasks.py  templates.py  traceability.py  webhooks.py
app/channels/: line_handler.py  rich_menu.py
app/core/: confirmation.py  doc_numbering.py  llm.py  meeting_extractor.py  orchestrator.py  scheduler.py  security.py  task_extractor.py  tracker_sync.py
app/db/: __init__.py  init_schema.py  models.py  session.py
app/ports/: calendar.py  document.py  email.py  tracker.py
app/schemas/: __init__.py
db/: README.md  schema.sql
design/: screens.html
liff/: app.js  index.html  styles.css
scripts/: dev_token.py  init_db.py  setup_rich_menu.py
